Ingress/service-saleor.yaml
---
apiVersion: v1
kind: Service
metadata: 
  name: saleor-svc
spec:
  type: ClusterIP
  selector:
    app: saleor-dashboard
  ports:
    - targetPort: 80
      port: 35000
