Ingress/service-student.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: student-svc
spec:
  type: ClusterIP
  selector:
    app: studentcourses
  ports:
    - targetPort: 8080
      port: 35001
